plugins {
    id 'org.springframework.boot' version '2.5.6'
    id 'java'
}

group = 'ru.otus'
version = '0.0.1'
sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17


dependencies {
    implementation('org.springframework.boot:spring-boot-starter-data-jdbc')
    implementation("org.springframework.boot:spring-boot-starter-websocket")

    implementation("org.webjars:webjars-locator-core")
    implementation("org.webjars:sockjs-client")
    implementation("org.webjars:stomp-websocket")
    implementation("org.webjars:bootstrap")

    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation('org.mapstruct:mapstruct')
    annotationProcessor('org.mapstruct:mapstruct-processor')

    implementation 'ch.qos.logback:logback-classic'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.postgresql:postgresql'

    implementation 'com.google.code.findbugs:jsr305:3.0.2'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'

}

test {
    useJUnitPlatform()
}
